force-app/main/default/objects/Account/fields/Customer_Interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interest__c</fullName>
    <label>Customer Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Meeting</fullName>
            </value>
            <value>
                <fullName>Banking products</fullName>
            </value>
            <value>
                <fullName>Wealth Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>