force-app/main/default/objects/Account/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>