force-app/main/default/objects/Account/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <label>Food</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>