force-app/main/default/objects/Account/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <label>Health</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>