force-app/main/default/objects/Account/fields/Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expenses__c</fullName>
    <label>Monthly Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>