force-app/main/default/objects/Account/fields/Monthly_Savings__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Savings__c</fullName>
    <label>Monthly Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>