force-app/main/default/objects/Account/fields/Risk_Appetite__c.field-meta.xml
<CustomField>
    <fullName>Risk_Appetite__c</fullName>
    <label>Risk Appetite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>